Define brand colors from adobe colors link: https://color.adobe.com/search?q=soccer

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -22,3 +22,9 @@ $positive  : #21BA45;
 $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
+
+$brand-1: #6AA62E; // $green
+$brand-2: #0A0D40; // $blue
+$brand-3: #010326; // $blue-dark
+$brand-4: #6077A6; // $blue-light
+$brand-5: #9ABF75; // $green-light
