--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,52 @@
 // app global css in SCSS form
+
+
+.text-brand-1 {
+  color: $brand-1;
+}
+.bg-brand-1 {
+  background: $brand-1;
+}
+
+.text-brand-2 {
+  color: $brand-2;
+}
+.bg-brand-2 {
+  background: $brand-2;
+}
+
+.text-brand-3 {
+  color: $brand-3;
+}
+.bg-brand-3 {
+  background: $brand-3;
+}
+
+.text-brand-4 {
+  color: $brand-4;
+}
+.bg-brand-4 {
+  background: $brand-4;
+}
+
+.text-brand-5 {
+  color: $brand-5;
+}
+.bg-brand-5 {
+  background: $brand-5;
+}
+
+.brand-blue-gradient {
+  background: rgb(1,3,38);
+  background: linear-gradient(43deg, rgba(1,3,38,1) 0%, rgba(96,119,166,1) 100%);
+}
+
+.brand-green-gradient {
+  background: rgb(154,191,117);
+  background: linear-gradient(180deg, rgba(154,191,117,1) 10%, rgba(255,255,255,1) 100%);
+}
+
+.brand-light-blue-gradient {
+  background: rgb(96,119,166);
+  background: linear-gradient(45deg, rgba(96,119,166,1) 0%, rgba(111,138,191,1) 100%);
+}
