--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -36,17 +36,58 @@
   background: $brand-5;
 }
 
+.text-brand-6 {
+  color: $brand-6;
+}
+.bg-brand-6 {
+  background: $brand-6;
+}
+
+// CUSTOM CLASSES ??
+.group {
+  background: $brand-5;
+  box-shadow: 0px 0px 8px 5px $brand-5;
+}
+
+.active-group {
+  background: $brand-5;
+  box-shadow:0px 0px 8px 5px $dark;
+}
+
+.border-green-box {
+  border-style: solid;
+  border-color: $brand-1;
+  border-width: 8px;
+}
+
+.border-dark-green-box {
+  border-style: solid;
+  border-color: $brand-3;
+  border-width: 8px;
+}
+
+.border-grey-box {
+  border-style: solid;
+  border-color: $brand-5;
+  border-width: 8px;
+}
+
 .brand-blue-gradient {
   background: rgb(1,3,38);
   background: linear-gradient(43deg, rgba(1,3,38,1) 0%, rgba(96,119,166,1) 100%);
 }
 
 .brand-green-gradient {
-  background: rgb(154,191,117);
-  background: linear-gradient(180deg, rgba(154,191,117,1) 10%, rgba(255,255,255,1) 100%);
+  background: rgb(119,172,75);
+  background: linear-gradient(45deg, rgba(119,172,75,1) 0%, rgba(78,123,41,1) 100%);
 }
 
 .brand-light-blue-gradient {
   background: rgb(96,119,166);
   background: linear-gradient(45deg, rgba(96,119,166,1) 0%, rgba(111,138,191,1) 100%);
+}
+
+.brand-dark-green-gradient {
+  background: rgb(78,123,41);
+  background: linear-gradient(215deg, rgba(78,123,41,1) 0%, rgba(62,112,1,1) 100%);
 }
