Modify brand colors new color pallete

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -23,8 +23,9 @@ $negative  : #C10015;
 $info      : #31CCEC;
 $warning   : #F2C037;
 
-$brand-1: #6AA62E; // $green
-$brand-2: #0A0D40; // $blue
-$brand-3: #010326; // $blue-dark
-$brand-4: #6077A6; // $blue-light
-$brand-5: #9ABF75; // $green-light
+$brand-1: #77AC4B; // $green
+$brand-2: #4E7B29; // $green-light
+$brand-3: #1C3300; // $green-dark
+$brand-4: #7F7F7F; // $grey
+$brand-5: #666666; // $grey-light
+$brand-6: #58555A; // $grey-dark
