Add green border thin variation class

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -66,6 +66,12 @@
   border-width: 8px;
 }
 
+.border-dark-green-box-thin {
+  border-style: solid;
+  border-color: $brand-3;
+  border-width: 3px;
+}
+
 .border-dark-green-box-dash {
   border-style: dashed;
   border-color: $brand-3;
